# feedblocks

./: .gitignore  pyproject.toml
.data/: etherscan.verified.os.csv
.github/: README.md  TODO.md
data/: ethereum__contracts__19480000_to_19480999.parquet  ethereum__contracts__19481000_to_19481999.parquet  ethereum__contracts__19482000_to_19482999.parquet  ethereum__contracts__19483000_to_19483999.parquet  ethereum__contracts__19508000_to_19508999.parquet
data/ethereum/contracts/: 19460000_to_19460999.parquet  19461000_to_19461999.parquet  19463000_to_19463999.parquet  19464000_to_19464999.parquet  19465000_to_19465999.parquet  19466000_to_19466999.parquet  19467000_to_19467999.parquet  19468000_to_19468999.parquet  19469000_to_19469999.parquet  19470000_to_19470999.parquet  19471000_to_19471999.parquet  19472000_to_19472999.parquet  19473000_to_19473999.parquet  19474000_to_19474999.parquet  19475000_to_19475999.parquet  19476000_to_19476999.parquet  19477000_to_19477999.parquet  19478000_to_19478999.parquet  19479000_to_19479000.parquet  19479000_to_19479999.parquet  19480000_to_19480999.parquet  19481000_to_19481999.parquet  19482000_to_19482999.parquet  19483000_to_19483999.parquet  19484000_to_19484000.parquet  19493000_to_19493999.parquet  19494000_to_19494999.parquet  19495000_to_19495999.parquet  19496000_to_19496999.parquet  19497000_to_19497999.parquet  19498000_to_19498999.parquet  19499000_to_19499999.parquet  19500000_to_19500999.parquet  (+1790 more)
feedblocks/: _logging.py  bytecode.py  data.py  main.py  scrape.py
scripts/: remove-empty-fragments.sh
(+9 files in other folders)
