[tool.poetry]
packages = [{include = "feedblocks"}]
name = "feedblocks"
version = "0.0.1"
description = "pipeline to train NN on blockchain data"
authors = ["apehex <apehex@protonmail.com>"]
readme = ".github/README.md"

[tool.poetry.dependencies]
pyarrow = ">=15.0"
python = ">=3.9,<4"
requests = ">=2.31"
web3 = ">=6.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
