[tool.poetry]
packages = [{include = "feedblocks"}]
name = "feedblocks"
version = "0.0.5"
description = "pipeline to train NN on blockchain data"
authors = ["apehex <apehex@protonmail.com>"]
readme = ".github/README.md"

[tool.poetry.dependencies]
pyarrow = ">=16.0"
python = ">=3.9,<4"
tensorflow = "^2.16.1"
tensorflow-datasets = ">=4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
